# zed-modified

./: .gitignore  Cargo.toml  integration_test.rs  test_workspace.rs
.zed/: workspace.json
crates/marketplace/: Cargo.toml
crates/marketplace/src/: extension_registry.rs  lib.rs  marketplace_api.rs  marketplace_metadata.rs  marketplace_ui.rs
crates/project_panel/src/: project_panel.rs
crates/remote_ssh/: Cargo.toml
crates/remote_ssh/src/: lib.rs  remote_fs.rs  remote_process.rs  remote_workspace.rs  ssh_config.rs  ssh_connection.rs
crates/remote_ssh_ui/: Cargo.toml
crates/remote_ssh_ui/src/: lib.rs  remote_terminal.rs  ssh_config_editor.rs  ssh_connection_picker.rs  ssh_key_manager.rs  ssh_status_bar.rs
crates/settings/src/: settings_store.rs
crates/workspace/src/: lib.rs  workspace.rs  workspace_file.rs  workspace_trust.rs  workspace_ui.rs
crates/zed/: Cargo.toml
crates/zed/src/: main.rs
test-workspace/: test.js
test-workspace/.zed/: workspace.json
