[package]
name = "remote_ssh"
version = "0.1.0"
edition.workspace = true
publish.workspace = true

[dependencies]
anyhow.workspace = true
async-trait.workspace = true
collections.workspace = true
dirs = "5.0"
fs.workspace = true
futures.workspace = true
gpui.workspace = true
http_client.workspace = true
log.workspace = true
regex = "1.10"
rpc.workspace = true
serde.workspace = true
serde_json.workspace = true
settings.workspace = true
smol.workspace = true
ssh2 = "0.9"
tokio.workspace = true
util.workspace = true

[lints]
workspace = true
