[package]
name = "remote_ssh_ui"
version = "0.1.0"
edition.workspace = true
publish.workspace = true

[dependencies]
anyhow.workspace = true
collections.workspace = true
dirs = "5.0"
fs.workspace = true
futures.workspace = true
gpui.workspace = true
log.workspace = true
remote_ssh.workspace = true
rpc.workspace = true
serde.workspace = true
serde_json.workspace = true
settings.workspace = true
smol.workspace = true
ui.workspace = true
util.workspace = true

[lints]
workspace = true
